# Baseline

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/Domain/: Coordinates.cpp  Coordinates.h  Delta.cpp  Delta.h  MultiTextBox.cpp  MultiTextBox.h  Player.cpp  Player.h  Projectile.h  Sprite.cpp  Sprite.h  Text.cpp  Text.h
src/Services/Engine/: Collisions.cpp  Collisions.h
test/Unit/: CMakeLists.txt
test/Unit/Domain/: TestCoordinates.cpp
